--- a/index.html
+++ b/index.html
@@ -10,67 +10,93 @@
 </head>
 
 <body>
-  <div class="content">
-    <a href="#" class="js-modal-open" data-target="modal01">モーダルウィンドウ１を開く</a>
-    <a href="#" class="js-modal-open" data-target="modal02">モーダルウィンドウ２を開く</a>
-    <a href="#" class="js-modal-open" data-target="modal03">モーダルウィンドウ３を開く</a>
-    <img src="img/soccer.jpg" alt="">
-  </div>
+<div class="content">
+  <a href="#" class="js-modal-open" data-target="modal01">モーダルウィンドウ１を開く</a>
+  <a href="#" class="js-modal-open" data-target="modal02">モーダルウィンドウ２を開く</a>
+  <a href="#" class="js-modal-open" data-target="modal03">モーダルウィンドウ３を開く</a>
+  <img src="img/soccer.jpg" alt="">
+  <a href="#" class="js-modal-open" data-target="modal01">モーダルウィンドウ１を開く</a>
 
-  <div id="modal01" class="modal js-modal">
-    <div class="modal__bg js-modal-close">
+</div>
+
+<div id="modal01" class="modal js-modal">
+  <div class="modal-bg js-modal-close">
+  </div>
+    <div class="modal-content">
+      <p>ここにコンテンツ１が入りますよよおよよｙｙ。ここにコンテンツ１が入ります。ここにコンテンツ１が入ります。</p>
+      <a href="#" class="js-modal-close">閉じる</a>
     </div>
-      <div class="modal__content">
-        <p>ここにコンテンツ１が入ります。ここにコンテンツ１が入ります。ここにコンテンツ１が入ります。</p>
-        <img src="img/soccer.jpg" class="aaa">
-        <a href="#" class="js-modal-close">閉じる</a>
-      </div>
-  </div>
+</div>
 
-  <div id="modal02" class="modal js-modal">
-    <div class="modal__bg js-modal-close">
+<div id="modal02" class="modal js-modal">
+  <div class="modal-bg js-modal-close">
+  </div>
+    <div class="modal-content">
+      <p>ここにコンテンツ２が入りますおよよおっよよ。ここにコンテンツ２が入ります。ここにコンテンツ２が入ります。</p>
+      <a href="#" class="js-modal-close">閉じる</a>
     </div>
-      <div class="modal__content">
-        <p>ここにコンテンツ２が入ります。ここにコンテンツ２が入ります。ここにコンテンツ２が入ります。</p>
-        <img src="img/soccer.jpg" class="aaa">
-        <a href="#" class="js-modal-close">閉じる</a>
-      </div>
-  </div>
+</div>
 
-  <div id="modal03" class="modal js-modal">
-    <div class="modal__bg js-modal-close">
+<div id="modal03" class="modal js-modal">
+  <div class="modal-bg js-modal-close">
+  </div>
+    <div class="modal-content">
+      <p>ここにコンテンツ３が入りまよよよよよよｙす。ここにコンテンツ３が入ります。ここにコンテンツ３が入ります。</p>
+      <img src="img/soccer.jpg" class="aaa">
+      <a href="#" class="js-modal-close">閉じる</a>
     </div>
-      <div class="modal__content">
-        <p>ここにコンテンツ３が入ります。ここにコンテンツ３が入ります。ここにコンテンツ３が入ります。</p>
-        <img src="img/soccer.jpg" class="aaa">
-        <a href="#" class="js-modal-close">閉じる</a>
-      </div>
-  </div>
+</div>
 
+<script>
+// モーダルウィンドウを開く
+// $('.js-modal-open').each(function(){
+  // $(this).on('click', function(){
+  $('.js-modal-open').on('click', function(){
+    var target = $(this).data('target');
+    var modal = document.getElementById(target);
+    scrollPosition = $(window).scrollTop();
 
-  <script>
-  var scrollPosition;
-  $(function(){
-    // モーダルを開く
-    $('.js-modal-open').each(function(){
-      $(this).on('click', function(){
-        var target = $(this).data('target');
-        var modal = document.getElementById(target);
-
-        $(modal).fadeIn();
-        scrollPosition = $(window).scrollTop();
-        $('body').addClass('fixed').css({'top': -scrollPosition});
-        return false;
-      });
-    });
-    // モーダルを閉じる
-    $('.js-modal-close').on('click', function(){
-      $('body').removeClass('fixed').css({'top': 0});
-      window.scrollTo( 0 , scrollPosition );
-      $('.js-modal').fadeOut();
-      return false;
-    });
+    $('body').addClass('fixed').css({'top': -scrollPosition});
+    $(modal).fadeIn();
+    return false;
   });
+// });
+
+// モーダルウィンドウを閉じる
+$('.js-modal-close').on('click', function(){
+  $('body').removeClass('fixed');
+  window.scrollTo( 0 , scrollPosition );
+  $('.js-modal').fadeOut();
+  return false;
+});
+
+  // var scrollPosition;
+  // $('.js-modal-open').on('click', function(){
+  //   scrollPosition = $(window).scrollTop();
+  //   $('body').addClass('fixed').css({'top': -scrollPosition});
+  //   $('.js-modal').fadeIn();
+  //   return false;
+  // });
+  // $('.js-modal-close').on('click', function(){
+  //   $('body').removeClass('fixed');
+  //   window.scrollTo( 0 , scrollPosition );
+  //   $('.js-modal').fadeOut();
+  //   return false;
+  // });
   </script>
+
+
+
+  <!-- <a href="#" class="js-modal-open">モーダルウィンドウを開く</a>
+
+  <div class="modal js-modal">
+    <div class="modal-bg js-modal-close">
+    </div>
+      <div class="modal-content">
+        <p>ここにコンテンツが入ります。ここにコンテンツが入ります。ここにコンテンツが入ります。</p>
+        <a href="#" class="js-modal-close">閉じる</a>
+      </div>
+  </div> -->
+
 </body>
 </html>
