--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="modal-bg js-modal-close">
   </div>
     <div class="modal-content">
-      <p>ここにコンテンツ１が入りますよよおよよｙｙ。ここにコンテンツ１が入ります。ここにコンテンツ１が入ります。</p>
+      <p>ここにコンテンツ１が入ります。ここにコンテンツ１が入ります。ここにコンテンツ１が入ります。。</p>
       <a href="#" class="js-modal-close">閉じる</a>
     </div>
 </div>
@@ -32,7 +32,7 @@
   <div class="modal-bg js-modal-close">
   </div>
     <div class="modal-content">
-      <p>ここにコンテンツ２が入りますおよよおっよよ。ここにコンテンツ２が入ります。ここにコンテンツ２が入ります。</p>
+      <p>ここにコンテンツ２が入ります。ここにコンテンツ２が入ります。ここにコンテンツ２が入ります。</p>
       <a href="#" class="js-modal-close">閉じる</a>
     </div>
 </div>
@@ -41,7 +41,7 @@
   <div class="modal-bg js-modal-close">
   </div>
     <div class="modal-content">
-      <p>ここにコンテンツ３が入りまよよよよよよｙす。ここにコンテンツ３が入ります。ここにコンテンツ３が入ります。</p>
+      <p>ここにコンテンツ３が入ります。ここにコンテンツ３が入ります。ここにコンテンツ３が入ります。</p>
       <img src="img/soccer.jpg" class="aaa">
       <a href="#" class="js-modal-close">閉じる</a>
     </div>
@@ -49,9 +49,9 @@
 
 <script>
 // モーダルウィンドウを開く
-// $('.js-modal-open').each(function(){
-  // $(this).on('click', function(){
-  $('.js-modal-open').on('click', function(){
+$('.js-modal-open').each(function(){
+  $(this).on('click', function(){
+  // $('.js-modal-open').on('click', function(){
     var target = $(this).data('target');
     var modal = document.getElementById(target);
     scrollPosition = $(window).scrollTop();
@@ -60,7 +60,7 @@
     $(modal).fadeIn();
     return false;
   });
-// });
+});
 
 // モーダルウィンドウを閉じる
 $('.js-modal-close').on('click', function(){
